--- a/index.html
+++ b/index.html
@@ -24,38 +24,37 @@
         </div>
 
       </div>
-
+    <!-- This is the Tea of the Month area -->
       <div class="month" id="month">
-        <div class="month top">
+        <div class="month-top">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at the Tea Cozy?</h4>
-          <div class="month images">
-            <div class="blitz">
-              <img src="./resources/images/berryblitz.jpg" alt="#">
-              <h2>Fall Berry Blitz Tea</h2>
-            </div>
-            <div class="rum">
-              <img src="./resources/images/spiced-rum.jpg" alt="#">
-              <h2>Spiced Rum Tea</h2>
-            </div>
-            <div class="donut">
-              <img src="./resources/images/donut.jpg" alt="#">
-              <h2>Seasonal Donuts</h2>
-            </div>
-            <div class="myrtle">
-              <img src="./resources/images/myrtle-ave.jpg" alt="#">
-              <h2>Myrtle Ave Tea</h2>
-            </div>
-            <div class="bedford">
-              <img src="./resources/images/bedford-bizarre.jpg" alt="#">
-              <h2>Bedford Bizarre Tea</h2>
-            </div>
-          </div>
-
         </div>
+        <div class="month-images">
+            <div class="img-box">
+              <img src="./resources/images/berryblitz.jpg" alt="#">
+              <h4>Fall Berry Blitz Tea</h2>
+            </div>
+            <div class="img-box">
+              <img src="./resources/images/spiced-rum.jpg" alt="#">
+              <h4>Spiced Rum Tea</h2>
+            </div>
+            <div class="img-box">
+              <img src="./resources/images/donut.jpg" alt="#">
+              <h4>Seasonal Donuts</h2>
+            </div>
+            <div class="img-box">
+              <img src="./resources/images/myrtle-ave.jpg" alt="#">
+              <h4>Myrtle Ave Tea</h2>
+            </div>
+            <div class="img-box">
+              <img src="./resources/images/bedford-bizarre.jpg" alt="#">
+              <h4>Bedford Bizarre Tea</h2>
+            </div>
+         </div>
 
       </div>
-
+    <!-- This is the location area -->
       <div class="location" id="location">
 
       </div>
