--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
-
       </div>
+
     <!-- This is the Tea of the Month area -->
       <div class="month" id="month">
-        <div class="month-top">
+        <div class="month-text">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at the Tea Cozy?</h4>
         </div>
         <div class="month-images">
+          <div class="mi-top">
             <div class="img-box">
               <img src="./resources/images/berryblitz.jpg" alt="#">
               <h4>Fall Berry Blitz Tea</h2>
@@ -43,6 +44,8 @@
               <img src="./resources/images/donut.jpg" alt="#">
               <h4>Seasonal Donuts</h2>
             </div>
+          </div>
+          <div class="mi-bottom">
             <div class="img-box">
               <img src="./resources/images/myrtle-ave.jpg" alt="#">
               <h4>Myrtle Ave Tea</h2>
@@ -51,15 +54,39 @@
               <img src="./resources/images/bedford-bizarre.jpg" alt="#">
               <h4>Bedford Bizarre Tea</h2>
             </div>
-         </div>
-
+          </div>
+        </div>
       </div>
+
     <!-- This is the location area -->
       <div class="location" id="location">
+        <div class="location-text">
+          <h2>Locations</h2>
+        </div>
+        <div class="location-bottom">
 
+            <div class="location-box">
+              <h3>Downtown</h3>
+              <h4>384 West 4th St</h4>
+              <h4>Suite 108</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="location-box">
+              <h3>East Bayside</h3>
+              <h4>3433 Phisherman's Avenue</h4>
+              <h4>(Northwest Corner)</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="location-box">
+              <h3>Oakdale</h3>
+              <h4>515 Crescent Avenue</h4>
+              <h4>Second Floor</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+
+        </div>
       </div>
     </main>
-
     <!-- This is the footer area -->
     <footer>
 
